--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         html,
         body,
         #root {
-          width: 100%;
+          width: 100vw;
           height: 100%;
           padding: 0;
           margin: 0;
